<resources>
    <string name="app_name">RapiVid-19 MX</string>
    <string name="info_estado">Información</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_descriprion">#</string>

    <string name="menu_general">Información General</string>
    <string name="menu_estados">Casos por Estado</string>
    <string name="menu_acerca">Sobre el Covid-19</string>
    <string name="menu_news">Noticias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensaje_header">Seguimiento del Covid-19 \nen México</string>
    <string name="stadics">Estadísticas</string>
    <string name="stadics2">Estadísticas de: </string>
    <string name="tending">Tendencias</string>
    <string name="active">Casos Activos</string>
    <string name="deaths">Casos Mortales</string>
    <string name="recupered">
        Casos \nRecuperados</string>
    <string name="totaly">Casos Totales</string>
    <string name="activos">Activos</string>
    <string name="total">Totales</string>
    <string name="last_update">Última Actualización:</string>
    <string name="fuente">Fuente: Bing</string>
    <string name="mapa">Mapa de Casos</string>
    <string name="semafor">Semáforo Epidemiológico</string>
    <string name="semafor2">El semáforo se encuentra actualmente en:</string>
    <string name="red">Rojo</string>
    <string name="orange">Naranja</string>
    <string name="yellow">Amarillo</string>
    <string name="green">Verde</string>
    <string name="rojo">Se permitirán únicamente las actividades económicas esenciales,
        asimismo se permitirá también que las personas puedan salir a caminar alrededor
        de sus domicilios durante el día.</string>
    <string name="rojo_s">No salgas si no es estrictamente necesario.</string>
    <string name="naranja">Además de las actividades económicas esenciales, se permitirá que las
        empresas de las actividades económicas no esenciales trabajen con el 30% del personal para su funcionamiento,
        siempre tomando en cuenta las medidas de cuidado, se abrirán los espacios públicos abiertos
        con un aforo (cantidad de personas) reducido.</string>
    <string name="naranja_s">Si puedes, quédate en casa.</string>
    <string name="amarillo">Todas las actividades laborales están permitidas. El espacio público
        abierto se abre de forma regular, y los espacios públicos cerrados se pueden abrir con
        aforo reducido. Estas actividades deben realizarse con medidas básicas de prevención.</string>
    <string name="amarillo_s">Hay más actividades pero con precaución.</string>
    <string name="verde">Se permiten todas las actividades, incluidas las escolares.</string>
    <string name="verde_s">Podemos salir pero con precaución y prevención.</string>
    <!-- Pantalla About -->
    <string name="sintomas">Sintomas del Covid-19</string>
    <string name="sintomasewe"> El COVID-19 afecta de distintas maneras en función de cada persona.
        La mayoría de las personas que se contagian presentan síntomas de intensidad leve o moderada,
        y se recuperan sin necesidad de hospitalización.\n</string>
    <string name="sintomas1">Los Sintomas más Comunes Son:</string>
    <string name="sintomas_html">
        &#8226; Fiebre\n&#8226; Tos seca\n&#8226; Cansancio
    </string>
    <string name="tratamiento">Tratamiento</string>
    <string name="tratamiento_header">Hasta la fecha, no hay vacunas o medicamentos específicos
        contra la COVID-19. Se están investigando tratamientos, que serán probados en
        ensayos clínicos.\n</string>
    <string name="tra_m">Tratamientos Médicos:</string>
    <string name="tra_m_p">Si tiene síntomas leves y, por lo demás, está sano, aíslese y póngase
        en contacto con su proveedor de atención médica o con una línea de información sobre la
        COVID‑19 para recibir asesoramiento.
    Solicite atención médica si tiene fiebre, tos y dificultad para respirar. Llame con antelación.\n
    </string>
    <string name="cuidado_m">Cuidado Personal:</string>
    <string name="cuidado_p">Si se siente enfermo debe descansar, beber mucho líquido y comer alimentos nutritivos.
        Permanezca en una habitación separada de los demás miembros de la familia y utilice un baño exclusivamente
        para usted si es posible. Limpie y desinfecte frecuentemente las superficies que toque.
    </string>
    <string name="q_a">Preguntas y Respuestas</string>
    <string name="question">¿Qué es el coronavirus?</string>
    <string name="answer">Los coronavirus son una familia de virus que causan enfermedades
        (desde el resfriado común hasta enfermedades respiratorias más graves) y circulan entre humanos y animales.

        En este caso, se trata del SARS-COV2. Apareció en China en diciembre pasado y
        provoca una enfermedad llamada COVID-19, que se extendió por el mundo y fue declarada
        pandemia global por la Organización Mundial de la Salud.\n</string>

    <string name="question1">¿Puedo contaguiarme de alguien sin sintomas?</string>
    <string name="answer1">El virus se contagia con mayor facilidad cuando una persona infectada presenta síntomas,
        pero también es posible contagiar el virus antes de que haya síntomas. Por eso, lo mejor es tener
        las manos limpias y no tocarse el rostro.\n</string>
    <string name="question2">¿Debo Usar Cubrebocas?</string>
    <string name="answer2">El cubreboca es una barrera útil para evitar que se expulsen las gotas de saliva que potencialmente estén contaminadas.
        El cubreboca se debe usar correctamente, sobre todo en lugares públicos cerrados en los que no se pueda mantener la sana distancia.
        No te olvides de usar el cubreboca junto con las medidas básicas de prevención como son la sana distancia (dos metros),
        lavado frecuente de manos y estornudo de etiqueta.</string>
    <string name="cuidados">Cuidados</string>
    <string name="cuidados1">Toma las precauciones adecuadas e infórmate bien para protegerte y cuidar de quienes te rodean.
        Sigue las recomendaciones de los organismos de salud pública de tu zona.</string>
    <string name="cuidados_2">Para evitar la propagación del COVID-19:</string>
    <string name="cuidados_3">
        &#8226; Lávate las manos con frecuencia. Usa agua y jabón o un desinfectante de manos a base de alcohol.\n
        &#8226; Mantén una distancia de seguridad con personas que tosan o estornuden.\n
        &#8226; Utiliza mascarilla cuando no sea posible mantener el distanciamiento físico.\n
        &#8226; No te toques los ojos, la nariz ni la boca.\n
        &#8226; Cuando tosas o estornudes, cúbrete la nariz y la boca con el codo flexionado o con un pañuelo.\n
        &#8226; Si no te encuentras bien, quédate en casa.\n
        &#8226; En caso de que tengas fiebre, tos o dificultad para respirar, busca atención médica.</string>
    <string name="recomendiaciones">Recomendaciones</string>
    <string name="reco1">Utiliza Mascarilla.</string>
    <string name="reco2">Lavate las manos.</string>
    <string name="reco3">Manten una distancia segura.</string>
    <string name="reco4">Si puedes, quédate en casa.</string>
    <string name="failure">Sin conexión a Internet!</string>
</resources>