<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.servicio.rapivid_19mx.ui.home.HomeFragment"
        android:label="@string/menu_general"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_estados"
        android:name="com.servicio.rapivid_19mx.ui.estados.listaEstadosFragment"
        android:label="@string/menu_estados"
        tools:layout="@layout/fragment_lista_estados" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.servicio.rapivid_19mx.ui.informacion.AboutFragment"
        android:label="@string/menu_acerca"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.servicio.rapivid_19mx.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />


</navigation>